tests/query_test/test_exprs.py
@@ -8,6 +8,37 @@ from tests.common.impala_test_suite import ImpalaTestSuite
 from tests.common.test_vector import *
 from tests.common.test_dimensions import create_exec_option_dimension
 from tests.common.test_dimensions import create_uncompressed_text_dimension
+from tests.util.test_file_parser import QueryTestSectionReader
+
+class TestExprs(ImpalaTestSuite):
+  @classmethod
+  def get_workload(cls):
+    return 'functional-query'
+
+  @classmethod
+  def add_test_dimensions(cls):
+    super(TestExprs, cls).add_test_dimensions()
+    if cls.exploration_strategy() == 'core':
+      # Test with file format that supports codegen
+      cls.TestMatrix.add_constraint(lambda v:\
+          v.get_value('table_format').file_format == 'text' and\
+          v.get_value('table_format').compression_codec == 'none')
+
+  def test_exprs(self, vector):
+    # TODO: Enable some of these tests for Avro if possible
+    # Don't attempt to evaluate timestamp expressions with Avro tables (which don't
+    # support a timestamp type)"
+    table_format = vector.get_value('table_format')
+    if table_format.file_format == 'avro':
+      pytest.skip()
+    if table_format.file_format == 'hbase':
+      pytest.xfail("A lot of queries check for NULLs, which hbase does not recognize")
+    self.run_test_case('QueryTest/exprs', vector)
+
+    # This will change the current database to matching table format and then execute
+    # select current_database(). An error will be thrown if multiple values are returned.
+    current_db = self.execute_scalar('select current_database()', vector=vector)
+    assert current_db == QueryTestSectionReader.get_db_name(table_format)
 
 # Tests very deep expression trees and expressions with many children. Impala defines
 # a 'safe' upper bound on the expr depth and the number of expr children in the
